--- a/dashboard.html
+++ b/dashboard.html
@@ -2243,26 +2243,40 @@
     @media (max-width: 768px) {
       .sidebar {
         transform: translateX(-100%);
+        width: 280px !important;
+        /* Force width ignoring .collapsed */
       }
 
       .sidebar.open {
         transform: translateX(0);
+        box-shadow: 5px 0 15px rgba(0, 0, 0, 0.5);
       }
 
       .main-content {
         margin-left: 0;
       }
 
-      .mobile-menu-btn {
-        display: block;
-        background: #667eea;
-        color: white;
-        border: none;
-        padding: 10px;
-        border-radius: 8px;
-        cursor: pointer;
+      .user-info {
+        padding: 1rem;
+        justify-content: space-between;
+        /* Allow button on left, user info on right */
       }
 
+      .mobile-menu-btn {
+        display: flex;
+        /* Show on mobile */
+        align-items: center;
+        justify-content: center;
+        background: rgba(255, 255, 255, 0.1);
+        color: white;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        padding: 8px 12px;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 1.2rem;
+        margin-right: auto;
+        /* Push to the left */
+      }
 
       .stats-grid {
         grid-template-columns: 1fr;
@@ -2275,6 +2289,47 @@
       .template-grid {
         grid-template-columns: 1fr;
       }
+
+      /* Ensure modal is responsive */
+      .pro-modal {
+        width: 95%;
+        height: 90vh;
+      }
+
+      /* Adjust padding for content */
+      .content-area {
+        padding: 1rem 0.5rem;
+      }
+
+      .page-container {
+        width: 100%;
+      }
+    }
+
+    /* Overlay for mobile sidebar */
+    .sidebar-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(3px);
+      z-index: 999;
+      /* Below sidebar (1000) */
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+    }
+
+    .sidebar-overlay.show {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .mobile-menu-btn {
+      display: none;
+      /* Hidden by default */
     }
 
     /* Loading Animation */
@@ -3620,7 +3675,10 @@
     <main class="main-content">
       <!-- Top Bar -->
       <!-- Top Bar -->
+      <!-- Top Bar -->
       <div class="user-info">
+        <button id="mobileMenuBtn" class="mobile-menu-btn" aria-label="Menu">☰</button>
+
         <button class="notification-bell">
           <svg viewBox="0 0 24 24" fill="currentColor" stroke="none" style="width:20px;height:20px;">
             <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
@@ -4660,6 +4718,13 @@
     // === 1. DEKLARACE GLOBÁLNÍCH PROMĚNNÝCH ===========================================
     // ===================================================================================
     const sidebar = document.getElementById('sidebar');
+    const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+
+    // Create and append overlay
+    const sidebarOverlay = document.createElement('div');
+    sidebarOverlay.className = 'sidebar-overlay';
+    document.body.appendChild(sidebarOverlay);
+
     const collapseBtn = document.getElementById('collapseBtn');
     const navLinks = document.querySelectorAll('.nav-link');
     const pageContents = document.querySelectorAll('.page-content');
@@ -8678,7 +8743,34 @@ S pozdravem
 
 
       checkMobile();
+      checkMobile();
       window.addEventListener('resize', checkMobile);
+
+      // Mobile Menu Logic
+      if (mobileMenuBtn) {
+        mobileMenuBtn.addEventListener('click', () => {
+          sidebar.classList.toggle('open');
+          sidebarOverlay.classList.toggle('show');
+        });
+      }
+
+      if (sidebarOverlay) {
+        sidebarOverlay.addEventListener('click', () => {
+          sidebar.classList.remove('open');
+          sidebarOverlay.classList.remove('show');
+        });
+      }
+
+      // Close sidebar when clicking a nav link on mobile
+      navLinks.forEach(link => {
+        link.addEventListener('click', () => {
+          if (window.innerWidth <= 768) {
+            sidebar.classList.remove('open');
+            sidebarOverlay.classList.remove('show');
+          }
+        });
+      });
+
 
       const initialActivePage = document.querySelector('.nav-link.active')?.getAttribute('data-page');
       if (initialActivePage === 'emails') {
