Update print statement from 'Hello' to 'Goodbye'

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Začít zdarma - AI Emailový Agent</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
-        window.BACKEND = 'http://localhost:3000';
+       window.BACKEND = 'https://ai-email-server-stejdesign.onrender.com';
     </script>
     <style>
         * {
@@ -823,7 +823,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <div class="logo-img-wrapper">
                         <img src="logo-Agent.png" alt="AI Agent Logo">
                     </div>
@@ -1208,3 +1208,4 @@
 </body>
 
 </html>
+
